Updated multiple components and pages: - Modified contact handling in getContact.ts - Updated BlogPostsSection, HeroSection, ServicesSection, and contact section components - Enhanced shared Footer and Navbar components - Adjusted MainLayout and pages (404, contacto, nosotros)

--- a/src/components/section/BlogPostsSection.astro
+++ b/src/components/section/BlogPostsSection.astro
@@ -12,13 +12,13 @@ const blogPosts = await getCollection("blog");
 const recentPosts = blogPosts
   .sort(
     (a, b) =>
-      new Date(a.data.pubDate).getTime() - new Date(b.data.pubDate).getTime()
+      new Date(a.data.pubDate).getTime() - new Date(b.data.pubDate).getTime(),
   )
   .slice(0, count);
 ---
 
 <section class="mx-auto py-20">
-  <div class="container max-w-10/12 mx-auto px-4">
+  <div class="container mx-auto px-4">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-[min(10vw,60px)] font-bold title"
     >
