--- a/src/components/section/HeroSection.astro
+++ b/src/components/section/HeroSection.astro
@@ -7,7 +7,7 @@ import heroImg from "../../assets/Images/hero-img.jpg";
   <!-- Hero Section with Image -->
 
   <div
-    class="relative min-h-screen w-full bg-gradient-to-br from-blueDark via-slate-300 to-blueMain overflow-hidden"
+    class="relative min-h-screen w-full bg-gradient-to-br from-blueDark via-slate-300 to-blueMain overflow-hidden rounded-md"
   >
     <div class="absolute top-0 right-0 left-0">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"
