--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="mx-auto pt-20">
-  <div class="container max-w-10/12 mx-auto">
+  <div class="container mx-auto">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
