--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,24 +17,22 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>{title}</title>
+    <script type="module">
+      import "/src/scripts/lenisSmooth.js";
+    </script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-
-    <script type="module">
-      import "/src/scripts/lenisSmooth.js";
-    </script>
 
     <ClientRouter />
   </head>
 
   <Navbar />
 
-  <body>
-    <main>
+  <body class="w-full p-0 m-0">
+    <main class="max-w-9/12 mx-auto">
       <div class="relative">
         <div class="absolute inset-0 z-0">
           <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
