--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -28,7 +28,7 @@ import Contact from "@/assets/Images/Contact.png";
         <rect width="100%" height="100%" fill="url(#circles)"></rect>
       </svg>
     </div>
-    <div class="container max-w-10/12 mx-auto relative z-10">
+    <div class="container mx-auto relative z-10">
       <h1
         class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
       >
@@ -36,7 +36,7 @@ import Contact from "@/assets/Images/Contact.png";
       </h1>
       <ContactBanner />
     </div>
-    <div class="grid md:grid-cols-2 gap-6 max-w-10/12 mx-auto relative z-10">
+    <div class="grid md:grid-cols-2 gap-6 mx-auto relative z-10">
       <ContactForm />
       <Image
         src={Sent}
@@ -47,7 +47,7 @@ import Contact from "@/assets/Images/Contact.png";
 
     <!-- Contact-info -->
     <div
-      class="container max-w-8/12 mx-auto grid md:grid-cols-3 gap-6 relative z-10"
+      class="container max-w-9/12 mx-auto grid md:grid-cols-3 gap-6 relative z-10"
     >
       <div class="flex flex-col items-center space-y-2">
         <Image
