before to use Gsap

--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -8,10 +8,10 @@ import TEAM from "@/assets/Images/TEAM.png";
   <div class="container mx-auto">
     <!-- Banner section -->
     <div
-      class="relative bg-gradient-to-br from-blueDark via-slate-300 to-blueMain overflow-hidden rounded-md mb-10"
+      class="relative bg-gradient-to-br from-blueDark via-slate-300 to-blueMain rounded-2xl overflow-hidden mb-10"
     >
       <!-- Decorative wave -->
-      <div class="absolute top-0 right-0 left-0">
+      <!-- <div class="absolute top-0 right-0 left-0">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"
           ><path
             fill="#ffffff"
@@ -19,7 +19,7 @@ import TEAM from "@/assets/Images/TEAM.png";
             d="M0,32L80,32C160,32,320,32,480,42.7C640,53,800,75,960,69.3C1120,64,1280,32,1360,16L1440,0L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
             style=""></path></svg
         >
-      </div>
+      </div> -->
       <!-- Text -->
       <div class="flex flex-col items-start py-18 px-5 md:py-24 md:pl-20">
         <h1
