Feat: enhance UI to made more readeable.

--- a/src/components/section/contact.astro
+++ b/src/components/section/contact.astro
@@ -2,15 +2,15 @@
 import ContactForm from "../ui/form/contactForm.astro";
 ---
 
-<section class="mx-auto pb-20">
+<section class="max-w-9/12 mx-auto pb-20">
   <div class="container mx-auto">
     <h1
-      class="mb-10 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
+      class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
       Contacto
     </h1>
     <div class="grid lg:grid-cols-2 gap-6">
-      <div class="flex flex-col max-w-2xl p-6 subTitle">
+      <div class="flex flex-col max-w-2xl md:p-6 subTitle">
         <h1
           class="text-4xl text-[min(10vw,60px)] font-bold text-slate-300 leading-tight"
         >
@@ -28,7 +28,7 @@ import ContactForm from "../ui/form/contactForm.astro";
   </div>
 </section>
 
-<style>
+<!-- <style>
   .title {
     animation: reveal-title 3s linear both;
     animation-timeline: view(block);
@@ -75,4 +75,4 @@ import ContactForm from "../ui/form/contactForm.astro";
       transform: translateY(80px);
     }
   }
-</style>
+</style> -->
