--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -21,7 +21,9 @@ import TEAM from "@/assets/Images/TEAM.png";
         >
       </div> -->
       <!-- Text -->
-      <div class="flex flex-col items-start py-18 px-5 md:py-24 md:pl-20">
+      <div
+        class="flex flex-col items-start py-18 px-5 md:py-24 max-w-9/12 mx-auto"
+      >
         <h1
           class="mb-10 tracking-tight text-4xl text-slate-100 text-[min(10vw,60px)] font-bold sm:text-start title"
         >
@@ -53,7 +55,9 @@ import TEAM from "@/assets/Images/TEAM.png";
       </div>
     </div>
     <!-- History section -->
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+    <div
+      class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center max-w-9/12 mx-auto"
+    >
       <!-- Left column: Content -->
       <div class="flex flex-col max-w-2xl ml-5">
         <h1
