--- a/src/components/section/BlogPostsSection.astro
+++ b/src/components/section/BlogPostsSection.astro
@@ -17,10 +17,10 @@ const recentPosts = blogPosts
   .slice(0, count);
 ---
 
-<section class="mx-auto py-20">
-  <div class="container mx-auto px-4">
+<section class="max-w-9/12 mx-auto">
+  <div class="container mx-auto">
     <h1
-      class="mb-12 tracking-tight text-4xl text-slate-900 text-[min(10vw,60px)] font-bold title"
+      class="my-12 md:my-16 tracking-tight text-4xl text-slate-900 text-[min(10vw,60px)] font-bold title"
     >
       Nuestros posts mas recientes
     </h1>
@@ -35,7 +35,7 @@ const recentPosts = blogPosts
   </div>
 </section>
 
-<style>
+<!-- <style>
   .title {
     animation: reveal-title linear both;
     animation-timeline: view(block);
@@ -71,4 +71,4 @@ const recentPosts = blogPosts
       transform: translateY(0px);
     }
   }
-</style>
+</style> -->
