--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -2,14 +2,14 @@
 
 ---
 
-<section class="mx-auto pt-20">
+<section class="max-w-9/12 mx-auto my-12 md:my-16">
   <div class="container mx-auto">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
       Nuestros servicios
     </h1>
-    <div class="services space-y-10">
+    <div class="services space-y-10 md:space-y-8">
       <!-- First-service -->
       <div class="flex flex-col items-start animated-service-1">
         <h1
@@ -119,7 +119,7 @@
   </div>
 </section>
 
-<style>
+<!-- <style>
   .title {
     animation: reveal-title 3s linear both;
     animation-timeline: view(block);
@@ -177,4 +177,4 @@
       opacity: 1;
     }
   }
-</style>
+</style> -->
