--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
   <Navbar />
 
   <body class="w-full p-0 m-0">
-    <main class="max-w-9/12 mx-auto">
+    <main class="w-full mx-auto">
       <div class="relative">
         <div class="absolute inset-0 z-0">
           <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
