--- a/src/components/section/BlogPostsSection.astro
+++ b/src/components/section/BlogPostsSection.astro
@@ -17,7 +17,7 @@ const recentPosts = blogPosts
   .slice(0, count);
 ---
 
-<section class="max-w-9/12 mx-auto">
+<section class="max-w-9/12 mx-auto mb-20">
   <div class="container mx-auto">
     <h1
       class="my-12 md:my-16 tracking-tight text-4xl text-slate-900 text-[min(10vw,60px)] font-bold title"
