--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,7 +12,7 @@ import { getCollection } from "astro:content";
 const allPosts = await getCollection("blog");
 
 const sortedPosts = allPosts.sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 
 const restPosts = sortedPosts.slice(1);
@@ -20,12 +20,12 @@ const mostRecentPost = sortedPosts[0];
 ---
 
 <MainLayout title="Nuestros posts">
-  <section class="max-w-10/12 mx-auto px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
+  <section class="max-w-9/12 mx-auto px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
     <div class="mb-10 text-center space-y-1.5">
       <h1 class="text-3xl font-bold capitalize text-slate-800">
         color kids: Expertos en el Bienestar Ocupacional de los Más Pequeños.
       </h1>
-      <p class="font-manrope text-[min(5vw,18px)] text-slate-600">
+      <p class="text-balance font-manrope text-[min(5vw,18px)] text-slate-600">
         Descubre cómo ayudar a tu pequeño a crecer sano mientras aprende! En
         nuestro blog compartimos consejos prácticos, investigaciones recientes y
         actividades divertidas que promueven hábitos saludables desde la
