feat: integrated GSAP library
🚀 Enhanced UX by making the navbar smaller based on scroll

👀 Still working on home page to add animations to different sections

--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -119,6 +119,27 @@
   </div>
 </section>
 
+<script>
+  import { gsap } from "gsap";
+
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+  gsap.registerPlugin(ScrollTrigger);
+
+  gsap.from(".title", {
+    opacity: 0,
+    x: -80,
+    duration: 1.5,
+    ease: "linear",
+    scrollTrigger: {
+      trigger: ".title",
+      start: "top 80%",
+      end: "top 30%",
+      scrub: 1,
+    },
+  });
+</script>
+
 <!-- <style>
   .title {
     animation: reveal-title 3s linear both;
