--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -28,7 +28,7 @@ import Contact from "@/assets/Images/Contact.png";
         <rect width="100%" height="100%" fill="url(#circles)"></rect>
       </svg>
     </div>
-    <div class="container mx-auto relative z-10">
+    <div class="max-w-9/12 mx-auto relative z-10">
       <h1
         class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
       >
@@ -36,19 +36,17 @@ import Contact from "@/assets/Images/Contact.png";
       </h1>
       <ContactBanner />
     </div>
-    <div class="grid md:grid-cols-2 gap-6 mx-auto relative z-10">
+    <div class="grid md:grid-cols-2 gap-6 max-w-9/12 mx-auto relative z-10">
       <ContactForm />
       <Image
         src={Sent}
         alt="Message Sent"
-        class="w-1/3 flex justify-center mx-auto hover:scale-105 transition duration-300 ease-in-out"
+        class="hidden w-1/3 md:flex md:justify-center md:mx-auto md:hover:scale-105 md:transition md:duration-300 md:ease-in-out"
       />
     </div>
 
     <!-- Contact-info -->
-    <div
-      class="container max-w-9/12 mx-auto grid md:grid-cols-3 gap-6 relative z-10"
-    >
+    <div class="max-w-9/12 mx-auto grid md:grid-cols-3 gap-6 relative z-10">
       <div class="flex flex-col items-center space-y-2">
         <Image
           src={Gps}
