feat: implement GSAP animations for blog posts, services, and navbar sections

--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -146,31 +146,6 @@ import logo from "../../assets/Images/logo-512x512.png";
 </script>
 
 <script>
-  import { gsap } from "gsap";
-
-  import { ScrollTrigger } from "gsap/ScrollTrigger";
-
-  gsap.registerPlugin(ScrollTrigger);
-
-  ScrollTrigger.create({
-    markers: true,
-    start: "top -80",
-    end: "top 110px",
-    onEnter: () => {
-      gsap.to(".image", {
-        height: "80px",
-        width: "80px",
-        duration: 0.5,
-      });
-    },
-    onLeaveBack: () => {
-      gsap.to(".image", {
-        height: "128px",
-        width: "128px",
-        duration: 0.5,
-      });
-    },
-
-    // toggleClass: { targets: ".image", className: "image-resize" },
-  });
+  import { navBarAnimation } from "../../scripts/homePageAnimations/navBarAnimation";
+  navBarAnimation();
 </script>
