--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -1,7 +1,13 @@
 ---
+import { getCollection } from "astro:content";
 import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
 import TEAM from "@/assets/Images/TEAM.png";
+import ThreeDCard from "@/components/ui/cards/ThreeDCard.astro";
+import ThreeDHovereffect from "@/components/ui/cards/ThreeDHovereffect.astro";
+import MemberTeamTypedCard from "@/components/ui/cards/MemberTeamTypedCard.astro";
+
+const authors = await getCollection("author");
 ---
 
 <MainLayout title="Nosotros">
@@ -54,9 +60,11 @@ import TEAM from "@/assets/Images/TEAM.png";
         </svg>
       </div>
     </div>
+    <!-- End Banner section -->
+
     <!-- History section -->
     <div
-      class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center max-w-9/12 mx-auto"
+      class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center max-w-9/12 mx-auto mb-16"
     >
       <!-- Left column: Content -->
       <div class="flex flex-col max-w-2xl ml-5">
@@ -86,6 +94,19 @@ import TEAM from "@/assets/Images/TEAM.png";
       <!-- Right column: Image -->
       <div class="relative w-full">
         <Image src={TEAM} alt="Hero Image" class="w-full" />
+      </div>
+    </div>
+    <!-- End History section -->
+
+    <!-- Team section -->
+    <div class="mx-auto max-w-9/12 mb-10">
+      <h1
+        class="text-4xl text-[min(10vw,60px)] font-bold text-slate-900 leading-tight mb-10"
+      >
+        Nuestro equipo
+      </h1>
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 items-center mx-auto">
+        {authors.map((author) => <MemberTeamTypedCard author={author} />)}
       </div>
     </div>
   </div>
