--- a/src/components/ui/cards/MemberTeamTypedCard.astro
+++ b/src/components/ui/cards/MemberTeamTypedCard.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const { author } = Astro.props;
 
-const { data } = author;
+const { data, id } = author;
 
 const { name, subtitle, avatar } = data;
 ---
@@ -21,10 +21,8 @@ const { name, subtitle, avatar } = data;
         class="size-32 rounded-xl hover:scale-110 transition-all duration-500"
     />
     <div class="flex flex-col gap-2">
-        <span class="text-2xl font-semibold font-manrope">{name}</span>
-        <p class="font-manrope">{subtitle}</p>
-
-        <div>
+        <div class="flex items-center gap-2">
+            <span class="text-2xl font-semibold font-manrope">{name}</span>
             <a href={data.instagram}>
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -37,6 +35,14 @@ const { name, subtitle, avatar } = data;
                     ></path></svg
                 >
             </a>
+        </div>
+        <p class="font-manrope text-slate-600">{subtitle}</p>
+
+        <div class="underline-offset-2 hover:underline">
+            <a href={`/author/${id}`}
+                >Conoce a: <span class="font-manrope font-semibold">{name}</span
+                ></a
+            >
         </div>
     </div>
 </div>
