feat: Add responsive services page using bento grid layout
- Implement responsive design for services page
- Utilize bento grid layout for modern UI presentation
- Ensure proper display across various device sizes
- Improve overall user experience with organized content layout

--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -159,4 +159,31 @@ import Arrow from "@/icons/Arrow.svg";
                                     >
                                     <span
                                         class="group-hover:-rotate-[35deg] transition duration-400 ease-in-out"
-                                        
+                                        ><Arrow /></span
+                                    >
+                                </button>
+                            </div>
+                            <div
+                                class="prose prose-p:text-slate-900 font-manrope leading-tight tracking-tight text-balance"
+                            >
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Impedit magnam alias ullam
+                                    enim accusantium.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="">
+                            <Image
+                                class="w-full h-full object-cover hover:scale-105 transition duration-400 ease-in-out"
+                                src={kidsBallon}
+                                alt="kids ballon"
+                            />
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+</MainLayout>
