feat: Update section widths for improved layout consistency across components

--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -28,7 +28,7 @@ const authors = await getCollection("author");
       </div> -->
       <!-- Text -->
       <div
-        class="flex flex-col items-start py-18 px-5 md:py-24 max-w-9/12 mx-auto"
+        class="flex flex-col items-start py-18 px-5 md:py-24 max-w-7xl mx-auto"
       >
         <h1
           class="mb-10 tracking-tight text-4xl text-slate-100 text-[min(10vw,60px)] font-bold sm:text-start title"
@@ -64,7 +64,7 @@ const authors = await getCollection("author");
 
     <!-- History section -->
     <div
-      class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center max-w-9/12 mx-auto mb-16"
+      class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center max-w-7xl mx-auto mb-16"
     >
       <!-- Left column: Content -->
       <div class="flex flex-col max-w-2xl ml-5">
@@ -99,7 +99,7 @@ const authors = await getCollection("author");
     <!-- End History section -->
 
     <!-- Team section -->
-    <div class="mx-auto max-w-9/12 mb-10">
+    <div class="mx-auto max-w-7xl mb-10">
       <h1
         class="text-4xl text-[min(10vw,60px)] font-bold text-slate-900 leading-tight mb-10"
       >
