--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="max-w-9/12 mx-auto my-12 md:my-20">
+<section class="max-w-7xl mx-auto my-12 md:my-20">
   <div class="container mx-auto">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
