--- a/src/components/shared/Footer.astro
+++ b/src/components/shared/Footer.astro
@@ -5,7 +5,7 @@ import logo from "../../assets/Images/logo-512x512.png";
 ---
 
 <section class="w-full border border-t-2 border-slate-100">
-  <footer class="w-full mx-auto md:w-9/12">
+  <footer class="w-full mx-auto md:max-w-7xl">
     <div class="block space-y-5 p-5 lg:flex lg:justify-between lg:p-5">
       <!-- Logo-mision -->
       <div class="flex flex-col items-center px-4 lg:px-0 lg:block">
