--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -7,7 +7,7 @@ import logo from "../../assets/Images/logo-512x512.png";
 <header
   class="sticky top-0 inset-x-0 flex flex-wrap md:flex-nonwrap z-50 w-full backdrop-blur-3xl main-header"
 >
-  <nav class="w-full mx-auto md:w-9/12 nav-bar">
+  <nav class="w-full mx-auto md:max-w-7xl nav-bar">
     <div class="flex justify-between items-center p-5">
       <!-- Logo -->
       <div>
@@ -122,7 +122,7 @@ import logo from "../../assets/Images/logo-512x512.png";
 
 <script>
   const btn = document.querySelector(
-    "button.open-mobile-menu",
+    "button.open-mobile-menu"
   ) as HTMLButtonElement;
   const menu = document.querySelector(".mobile-menu") as HTMLDivElement;
   const openIcon = document.querySelector("#open-icon") as HTMLElement;
