--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
 
   <Navbar />
 
-  <body class="w-full p-0 m-0">
+  <body class="w-full p-0 m-0 overflow-x-hidden">
     <main class="w-full mx-auto">
       <div class="relative">
         <div class="absolute inset-0 z-0">
@@ -65,5 +65,6 @@ const { title } = Astro.props;
       }
     </style>
   </body>
+
 
 </html>
