--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,7 +12,7 @@ import { getCollection } from "astro:content";
 const allPosts = await getCollection("blog");
 
 const sortedPosts = allPosts.sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 
 const restPosts = sortedPosts.slice(1);
@@ -20,7 +20,7 @@ const mostRecentPost = sortedPosts[0];
 ---
 
 <MainLayout title="Nuestros posts">
-  <section class="max-w-9/12 mx-auto px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
+  <section class="max-w-7xl mx-auto px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
     <div class="mb-10 text-center space-y-1.5">
       <h1 class="text-3xl font-bold capitalize text-slate-800">
         color kids: Expertos en el Bienestar Ocupacional de los Más Pequeños.
