Feat: Enhance the user experience in all pages

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -36,7 +36,7 @@ import Contact from "@/assets/Images/Contact.png";
       </h1>
       <ContactBanner />
     </div>
-    <div class="grid md:grid-cols-2 gap-6 max-w-7xl mx-auto relative z-10">
+    <div class="grid md:grid-cols-2 gap-6 max-w-7xl mx-auto relative z-10 px-4">
       <ContactForm />
       <Image
         src={Sent}
