--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -99,7 +99,7 @@ const authors = await getCollection("author");
     <!-- End History section -->
 
     <!-- Team section -->
-    <div class="mx-auto max-w-7xl mb-10">
+    <div class="mx-auto max-w-7xl mb-10 px-4">
       <h1
         class="text-4xl text-[min(10vw,60px)] font-bold text-slate-900 leading-tight mb-10"
       >
