--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -6,7 +6,7 @@ import Arrow from "@/icons/Arrow.svg";
 ---
 
 <MainLayout title="Servicios">
-  <section class="container mx-auto">
+  <section class="container mx-auto px-4">
     <div class="flex flex-col items-center gap-6 max-w-7xl mx-auto my-10">
       <div class="flex flex-col text-center md:text-start mb-10">
         <h1
