--- a/src/components/section/ServicesSection.astro
+++ b/src/components/section/ServicesSection.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="max-w-7xl mx-auto my-12 md:my-20">
-  <div class="container mx-auto">
+  <div class="container mx-auto px-4">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
