--- a/src/components/section/contact.astro
+++ b/src/components/section/contact.astro
@@ -3,7 +3,7 @@ import ContactForm from "../ui/form/contactForm.astro";
 ---
 
 <section class="max-w-7xl mx-auto pb-20">
-  <div class="container mx-auto">
+  <div class="container mx-auto px-4">
     <h1
       class="mb-12 tracking-tight text-4xl text-slate-900 text-center text-[min(10vw,60px)] font-bold sm:text-start title"
     >
