--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -5,7 +5,7 @@ import logo from "../../assets/Images/logo-512x512.png";
 ---
 
 <header
-  class="sticky top-0 inset-x-0 flex flex-wrap md:flex-nonwrap z-50 w-full backdrop-blur-3xl main-header"
+  class="fixed top-0 inset-x-0 flex flex-wrap md:flex-nonwrap z-50 w-full backdrop-blur-3xl main-header"
 >
   <nav class="w-full mx-auto md:max-w-7xl nav-bar">
     <div class="flex justify-between items-center p-5">
