--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,7 +27,9 @@ const { title } = Astro.props;
 
   <body class="w-full p-0 m-0 overflow-x-hidden">
     <Navbar />
-    <main class="w-full mx-auto">
+    <main
+      class="w-full mx-auto pt-[168px] md:pt-[168px] min-h-[calc(100vh-168px)]"
+    >
       <div class="relative">
         <div class="absolute inset-0 z-0">
           <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
