fix: Adjust HeroCardTypedPost width and update BlogLayout body padding for improved layout consistency

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -22,7 +22,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
 
-  <body class="w-full mx-auto min-h-screen pb-10 px-5 md:pb-16 md:px-8">
+  <body
+    class="w-full mx-auto min-h-screen pb-10 pt-[150px] px-5 md:pb-16 md:px-8"
+  >
     <Navbar />
     <main class="">
       <div class="relative">
