--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -70,7 +70,7 @@ const author = await getEntry("author", data.author.id);
           </div>
         </div>
         <div>
-          <a href={author?.data.instagram}>
+          <a href={author?.data.instagram} target="_blank">
             <button
               type="button"
               class="px-2 py-2 border border-slate-900 rounded-xl shadow-2xs transition hover:shadow-2xl duration-300"
